Changed path from where to pull the dataset file

--- a/index.html
+++ b/index.html
@@ -6156,7 +6156,7 @@ var $elm$http$Http$get = function (r) {
 var $author$project$Report3$getText = $elm$http$Http$get(
 	{
 		expect: $elm$http$Http$expectString($author$project$Report3$GotText),
-		url: 'http://localhost:8080/' + 'Sleep_Efficiency.csv'
+		url: 'https://clemensweisse.github.io/' + 'Sleep_Efficiency.csv'
 	});
 var $author$project$Report3$init = function (_v0) {
 	return _Utils_Tuple2(
